Tests/a1/reject/17.ul
int main (int x) {
	string "";
}